--- a/src/app/layout/listado/producto/producto.component.html
+++ b/src/app/layout/listado/producto/producto.component.html
@@ -1,5 +1,5 @@
 <div class="card">
-    <div class="card-header">
+    <div class="card-header text-capitalize">
         {{producto.nombre}}
     </div>
     <div class="card-body">
